DTSAM-367 Unit test fix after merge conflicts (#2513)