@@ -22,7 +22,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.collection.IsIterableContainingInAnyOrder.containsInAnyOrder;
@@ -63,6 +62,7 @@ class DroolSscsJudicialOfficeMappingTest extends DroolBase {
         """;
 
     @BeforeEach
+    @Override
     public void setUp() {
         super.setUp();
         judicialOfficeHolders = new HashSet<>();
@@ -97,7 +97,7 @@ class DroolSscsJudicialOfficeMappingTest extends DroolBase {
         //assertion
         assertFalse(roleAssignments.isEmpty());
         assertEquals(expectedRoles.split(",").length, roleAssignments.size());
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
+        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).toList(),
                 containsInAnyOrder(expectedRoles.split(",")));
 
         roleAssignments.forEach(r -> {
@@ -158,7 +158,7 @@ class DroolSscsJudicialOfficeMappingTest extends DroolBase {
         //assertion
         assertFalse(roleAssignments.isEmpty());
         assertEquals(expectedRoles.split(",").length, roleAssignments.size());
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
+        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).toList(),
                 containsInAnyOrder(expectedRoles.split(",")));
 
         roleAssignments.forEach(r -> {
@@ -201,7 +201,7 @@ class DroolSscsJudicialOfficeMappingTest extends DroolBase {
         //assertion
         assertFalse(roleAssignments.isEmpty());
         assertEquals(expectedRoles.split(",").length, roleAssignments.size());
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
+        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).toList(),
                 containsInAnyOrder(expectedRoles.split(",")));
 
         roleAssignments.forEach(r -> {
@@ -489,7 +489,7 @@ class DroolSscsJudicialOfficeMappingTest extends DroolBase {
 
         //assertion
         assertEquals(expectedRoles.split(",").length, roleAssignments.size());
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
+        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).toList(),
                 containsInAnyOrder(expectedRoles.split(",")));
         assertFalse(roleAssignments.isEmpty());
 
@@ -527,7 +527,7 @@ class DroolSscsJudicialOfficeMappingTest extends DroolBase {
 
         //assertion
         assertEquals(expectedRoles.split(",").length, roleAssignments.size());
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
+        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).toList(),
                 containsInAnyOrder(expectedRoles.split(",")));
         assertFalse(roleAssignments.isEmpty());
         roleAssignments.forEach(r -> {
@@ -558,7 +558,7 @@ class DroolSscsJudicialOfficeMappingTest extends DroolBase {
 
         //assertion
         assertFalse(roleAssignments.isEmpty());
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
+        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).toList(),
                 containsInAnyOrder("leadership-judge", "task-supervisor", "case-allocator",
                         "specific-access-approver-judiciary", "hmcts-judiciary", "judge",
                         "post-hearing-salaried-judge"));
@@ -602,8 +602,7 @@ class DroolSscsJudicialOfficeMappingTest extends DroolBase {
         List<JudicialOfficeHolder> outputJoh = new ArrayList<>();
 
         //Execute Kie session
-        List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getAllFeatureFlagsToggleByJurisdiction("SSCS", true), outputJoh);
+        List<RoleAssignment> roleAssignments = buildExecuteKieSession(setFeatureFlags(), outputJoh);
 
         // verify region and baseLocation are blank
         outputJoh.forEach(joh -> {
@@ -626,8 +625,7 @@ class DroolSscsJudicialOfficeMappingTest extends DroolBase {
         List<JudicialOfficeHolder> outputJoh = new ArrayList<>();
 
         //Execute Kie session
-        List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getAllFeatureFlagsToggleByJurisdiction("SSCS", true), outputJoh);
+        List<RoleAssignment> roleAssignments = buildExecuteKieSession(setFeatureFlags(), outputJoh);
 
         // verify region and baseLocation are blank
         outputJoh.forEach(joh -> {
@@ -716,11 +714,8 @@ class DroolSscsJudicialOfficeMappingTest extends DroolBase {
         }
     }
 
-    private static List<FeatureFlag> setFeatureFlags() {
-        List<String> flags = List.of("sscs_wa_1_0", "sscs_wa_1_1", "sscs_wa_1_2", "sscs_wa_1_3", "sscs_wa_1_4");
-
-        return flags.stream()
-                .map(flag -> FeatureFlag.builder().flagName(flag).status(true).build())
-                .toList();
+    private List<FeatureFlag> setFeatureFlags() {
+        return getAllFeatureFlagsToggleByJurisdiction("SSCS", true, false);
     }
+
 }
